syntax = "proto3";

package calculator;
option go_package = "calculator/calculatorpb/";

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 result = 1;
}

message PrimeNumberDecompositionRequest {
  int32 input_number = 1;
}

message PrimeNumberDecompositionResponse {
  int32 result = 1;
}

message ComputeAverageRequest {
  int64 number = 1;
}

message ComputeAverageResponse {
  float average = 1;
}

service CalculatorService {
  // Unary
  rpc Sum(SumRequest) returns (SumResponse) {};

  // Server Streaming
  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};

  // Client Streaming
  rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
}